set program icons and text, fix gap
background icon containers had a big width that created a gap, fixed
setted program icons, title and text

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -39,7 +39,7 @@ nav {
 /* mobile nav */
 #mobile_nav {
   position: fixed;
-  display: flex;
+  display: none;
   width: 100vw;
   height: 100vh;
   flex-wrap: wrap;
@@ -126,6 +126,9 @@ nav {
   width: 100%;
   height: 100%;
 }
+.bgicon{
+  width: 30px;
+}
 
 .circleIcon {
   position: absolute;
@@ -191,3 +194,38 @@ h3{
   border: 2px solid #fff;
   background-color: #f8f8f8;
 }
+
+/*---program section*/
+
+#program {
+  gap: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #272a31;
+  color: #fff;
+  background-image: url(../img/programbg.png);
+}
+
+.red_vector {
+  background-color: var(--red);
+  width: 2em;
+  height: 1px;
+}
+
+.program_item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  gap: 9px;
+  background-color: #fff2;
+  width: 95%;
+  min-height: 5em;
+}
+
+.program_icon {
+  min-width: 3.8em;
+  height: 3.8em;
+}
+
