--- a/css/normalice.css
+++ b/css/normalice.css
@@ -11,3 +11,9 @@ body {
 main {
   display: block;
 }
+
+
+img {
+  max-height: 100%;
+  max-width: 100%;
+}
